# position_tracking

./: Cargo.toml  config.yaml
src/: main.rs
src/modules/: mod.rs
src/modules/camera_service/: bf_match.rs  camera_service.rs  camera_service_conf.rs  gray_scale.rs  image_conf.rs  mod.rs  modbus_service.rs  modbus_service_conf.rs  template_match.rs  template_match_conf.rs
src/modules/filter/: filter.rs  filter_empty.rs  filter_lowpass.rs  filter_smooth.rs  mod.rs
src/modules/modbus_service/: mod.rs
src/tests/filter/: filter_smooth_test.rs  mod.rs
